--- a/frontend/src/components/stylesheets/Navbar/NavbarLinks.css
+++ b/frontend/src/components/stylesheets/Navbar/NavbarLinks.css
@@ -8,6 +8,7 @@
     font-size: var(--font-size-base);
     font-weight: bold;
     line-height: 1;
+    height: 100%;
 }
 
 .navbar-link:hover {
@@ -18,6 +19,9 @@
     font-size: var(--font-size-heading);
     flex-shrink: 0;
     opacity: 0.6;
+    line-height: 1;
+    display: flex;
+    align-items: center;
 }
 
 @media (max-width: 768px) {
